Update Granted User password. Added endpoint, documentation and tests
