# src/User/Infrastructure/Controller/ChangePasswordController.php
@@ -5,38 +5,32 @@ declare(strict_types=1);
 namespace App\User\Infrastructure\Controller;
 
 use App\Shared\Application\Command\CommandBus;
-use App\Shared\Application\Exception\BadRequest\BadRequestException;
 use App\Shared\Application\Exception\Unauthorized\UnauthorizedException;
 use App\Shared\Infrastructure\Security\RoutePermission;
 use App\Shared\Infrastructure\Service\JsonResponseService;
-use App\User\Application\Command\UpdateUser\UpdateUserCommand;
-use App\User\Infrastructure\Request\UpdateUserDto;
+use App\User\Application\Command\ChangePassword\ChangePasswordCommand;
+use App\User\Infrastructure\Request\ChangePasswordDto;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\Routing\Attribute\Route;
 
-#[Route('/api/users/{user_id}', name: RoutePermission::USER_UPDATE_USER->value, methods: ['PATCH'])]
-class UpdateUserController
+#[Route('/api/users/{user_id}/change-password', name: RoutePermission::USER_CHANGE_PASSWORD->value, methods: ['PATCH'])]
+class ChangePasswordController
 {
     public function __construct(
-        private CommandBus $commandBus,
+        private CommandBus          $commandBus,
         private JsonResponseService $jsonResponseService
     ) {
     }
 
-    public function __invoke(UpdateUserDto $request): JsonResponse
+    public function __invoke(ChangePasswordDto $request): JsonResponse
     {
         try {
             $this->commandBus->dispatch(
-                new UpdateUserCommand(
-                    $request->userId,
-                    $request->firstName,
-                    $request->lastName,
-                    $request->email,
-                    $request->roles
+                new ChangePasswordCommand(
+                    $request->newPassword,
+                    $request->oldPassword
                 )
             );
-        } catch (BadRequestException $e) {
-            return $this->jsonResponseService->badRequest($e->getMessage());
         } catch (UnauthorizedException $e) {
             return $this->jsonResponseService->unauthorized($e->getMessage());
         }
